--- a/translate/index.html
+++ b/translate/index.html
@@ -209,7 +209,7 @@ EolpMwAAAABJRU5ErkJggg==" />
     <tr>
       <th scope="row"><span class="na">NA</span> <span class="trn">index</span></th>
       <td><a rel="cannonical" href="https://cgc-dan.github.io/cgc-designers/" target="_blank"><span class="trn">Main Page</span></a></td>
-      <td>main.pot, main.po, main.html</td>
+      <td>main.pot, main.po, <a href="https://cgc-dan.github.io/cgc-designers/p/translate/main/main.html" target="_blank">main.html</a></td>
       <td align="center"><a href="https://github.com/cgc-dan/cgc-designers/releases/tag/trn1-Main" target="_blank">
 	  <svg class="svg-icon-dnld" viewBox="0 0 20 20">
 							<path fill="none" d="M15.608,6.262h-2.338v0.935h2.338c0.516,0,0.934,0.418,0.934,0.935v8.879c0,0.517-0.418,0.935-0.934,0.935H4.392c-0.516,0-0.935-0.418-0.935-0.935V8.131c0-0.516,0.419-0.935,0.935-0.935h2.336V6.262H4.392c-1.032,0-1.869,0.837-1.869,1.869v8.879c0,1.031,0.837,1.869,1.869,1.869h11.216c1.031,0,1.869-0.838,1.869-1.869V8.131C17.478,7.099,16.64,6.262,15.608,6.262z M9.513,11.973c0.017,0.082,0.047,0.162,0.109,0.226c0.104,0.106,0.243,0.143,0.378,0.126c0.135,0.017,0.274-0.02,0.377-0.126c0.064-0.065,0.097-0.147,0.115-0.231l1.708-1.751c0.178-0.183,0.178-0.479,0-0.662c-0.178-0.182-0.467-0.182-0.645,0l-1.101,1.129V1.588c0-0.258-0.204-0.467-0.456-0.467c-0.252,0-0.456,0.209-0.456,0.467v9.094L8.443,9.553c-0.178-0.182-0.467-0.182-0.645,0c-0.178,0.184-0.178,0.479,0,0.662L9.513,11.973z"></path>
@@ -218,7 +218,7 @@ EolpMwAAAABJRU5ErkJggg==" />
     <tr>
       <th scope="row"><span class="na">NA</span> <span class="trn">code bios and profiles</span></th>
       <td><span class="trn">Code Bios and Profiles</span></td>
-      <td>bios.pot, bios.po, bios.html</td>
+      <td>bios.pot, bios.po, <a href="https://cgc-dan.github.io/cgc-designers/p/translate/bios/bios.html" target="_blank">bios.html</a></td>
       <td align="center"><a href="https://github.com/cgc-dan/cgc-designers/releases/tag/trn2-CBP" target="_blank">
 	  <svg class="svg-icon-dnld" viewBox="0 0 20 20">
 							<path fill="#09F" d="M15.608,6.262h-2.338v0.935h2.338c0.516,0,0.934,0.418,0.934,0.935v8.879c0,0.517-0.418,0.935-0.934,0.935H4.392c-0.516,0-0.935-0.418-0.935-0.935V8.131c0-0.516,0.419-0.935,0.935-0.935h2.336V6.262H4.392c-1.032,0-1.869,0.837-1.869,1.869v8.879c0,1.031,0.837,1.869,1.869,1.869h11.216c1.031,0,1.869-0.838,1.869-1.869V8.131C17.478,7.099,16.64,6.262,15.608,6.262z M9.513,11.973c0.017,0.082,0.047,0.162,0.109,0.226c0.104,0.106,0.243,0.143,0.378,0.126c0.135,0.017,0.274-0.02,0.377-0.126c0.064-0.065,0.097-0.147,0.115-0.231l1.708-1.751c0.178-0.183,0.178-0.479,0-0.662c-0.178-0.182-0.467-0.182-0.645,0l-1.101,1.129V1.588c0-0.258-0.204-0.467-0.456-0.467c-0.252,0-0.456,0.209-0.456,0.467v9.094L8.443,9.553c-0.178-0.182-0.467-0.182-0.645,0c-0.178,0.184-0.178,0.479,0,0.662L9.513,11.973z"></path>
@@ -233,7 +233,7 @@ EolpMwAAAABJRU5ErkJggg==" />
     <tr>
       <th scope="row"><span class="cb">CB</span> <span class="trn">code chaturbate bios</span></th>
       <td><span class="trn">Code Chaturbate Bios</span></td>
-      <td>bioscb.pot, bioscb.po, bioscb.html</td>
+      <td>bioscb.pot, bioscb.po, <a href="https://cgc-dan.github.io/cgc-designers/p/translate/code-bios-cb/bioscb.html" target="_blank">bioscb.html</a></td>
       <td align="center"><a href="https://github.com/cgc-dan/cgc-designers/releases/tag/trn3-CBBi" target="_blank">
 	  <svg class="svg-icon-dnld" viewBox="0 0 20 20">
 							<path fill="#09F" d="M15.608,6.262h-2.338v0.935h2.338c0.516,0,0.934,0.418,0.934,0.935v8.879c0,0.517-0.418,0.935-0.934,0.935H4.392c-0.516,0-0.935-0.418-0.935-0.935V8.131c0-0.516,0.419-0.935,0.935-0.935h2.336V6.262H4.392c-1.032,0-1.869,0.837-1.869,1.869v8.879c0,1.031,0.837,1.869,1.869,1.869h11.216c1.031,0,1.869-0.838,1.869-1.869V8.131C17.478,7.099,16.64,6.262,15.608,6.262z M9.513,11.973c0.017,0.082,0.047,0.162,0.109,0.226c0.104,0.106,0.243,0.143,0.378,0.126c0.135,0.017,0.274-0.02,0.377-0.126c0.064-0.065,0.097-0.147,0.115-0.231l1.708-1.751c0.178-0.183,0.178-0.479,0-0.662c-0.178-0.182-0.467-0.182-0.645,0l-1.101,1.129V1.588c0-0.258-0.204-0.467-0.456-0.467c-0.252,0-0.456,0.209-0.456,0.467v9.094L8.443,9.553c-0.178-0.182-0.467-0.182-0.645,0c-0.178,0.184-0.178,0.479,0,0.662L9.513,11.973z"></path>
@@ -242,7 +242,7 @@ EolpMwAAAABJRU5ErkJggg==" />
     <tr>
       <th scope="row"><span class="cb">CB</span> <span class="trn">&lt;a&gt;</span></th>
       <td><span class="trn">CB markup tag</span> &lt;a&gt;</td>
-      <td>cb-a.pot, cb-a.po, cb-a.html</td>
+      <td>cb-a.pot, cb-a.po, <a href="https://cgc-dan.github.io/cgc-designers/p/translate/cb-a/cb-a.html" target="_blank">cb-a.html</a></td>
       <td align="center"><a href="https://github.com/cgc-dan/cgc-designers/releases/tag/trn4-A" target="_blank">
 	  <svg class="svg-icon-dnld" viewBox="0 0 20 20">
 							<path fill="#09F" d="M15.608,6.262h-2.338v0.935h2.338c0.516,0,0.934,0.418,0.934,0.935v8.879c0,0.517-0.418,0.935-0.934,0.935H4.392c-0.516,0-0.935-0.418-0.935-0.935V8.131c0-0.516,0.419-0.935,0.935-0.935h2.336V6.262H4.392c-1.032,0-1.869,0.837-1.869,1.869v8.879c0,1.031,0.837,1.869,1.869,1.869h11.216c1.031,0,1.869-0.838,1.869-1.869V8.131C17.478,7.099,16.64,6.262,15.608,6.262z M9.513,11.973c0.017,0.082,0.047,0.162,0.109,0.226c0.104,0.106,0.243,0.143,0.378,0.126c0.135,0.017,0.274-0.02,0.377-0.126c0.064-0.065,0.097-0.147,0.115-0.231l1.708-1.751c0.178-0.183,0.178-0.479,0-0.662c-0.178-0.182-0.467-0.182-0.645,0l-1.101,1.129V1.588c0-0.258-0.204-0.467-0.456-0.467c-0.252,0-0.456,0.209-0.456,0.467v9.094L8.443,9.553c-0.178-0.182-0.467-0.182-0.645,0c-0.178,0.184-0.178,0.479,0,0.662L9.513,11.973z"></path>
@@ -251,7 +251,7 @@ EolpMwAAAABJRU5ErkJggg==" />
     <tr>
       <th scope="row"><span class="cb">CB</span> <span class="trn">&lt;p&gt;</span></th>
       <td><span class="trn">CB markup tag</span> &lt;p&gt;</td>
-      <td>cb-p.pot, cb-p.po, cb-p.html</td>
+      <td>cb-p.pot, cb-p.po, <a href="https://cgc-dan.github.io/cgc-designers/p/translate/cb-p/cb-p.html" target="_blank">cb-p.html</a></td>
       <td align="center"><a href="https://github.com/cgc-dan/cgc-designers/releases/tag/trn4-P" target="_blank">
 	  <svg class="svg-icon-dnld" viewBox="0 0 20 20">
 							<path fill="#09F" d="M15.608,6.262h-2.338v0.935h2.338c0.516,0,0.934,0.418,0.934,0.935v8.879c0,0.517-0.418,0.935-0.934,0.935H4.392c-0.516,0-0.935-0.418-0.935-0.935V8.131c0-0.516,0.419-0.935,0.935-0.935h2.336V6.262H4.392c-1.032,0-1.869,0.837-1.869,1.869v8.879c0,1.031,0.837,1.869,1.869,1.869h11.216c1.031,0,1.869-0.838,1.869-1.869V8.131C17.478,7.099,16.64,6.262,15.608,6.262z M9.513,11.973c0.017,0.082,0.047,0.162,0.109,0.226c0.104,0.106,0.243,0.143,0.378,0.126c0.135,0.017,0.274-0.02,0.377-0.126c0.064-0.065,0.097-0.147,0.115-0.231l1.708-1.751c0.178-0.183,0.178-0.479,0-0.662c-0.178-0.182-0.467-0.182-0.645,0l-1.101,1.129V1.588c0-0.258-0.204-0.467-0.456-0.467c-0.252,0-0.456,0.209-0.456,0.467v9.094L8.443,9.553c-0.178-0.182-0.467-0.182-0.645,0c-0.178,0.184-0.178,0.479,0,0.662L9.513,11.973z"></path>
@@ -260,7 +260,7 @@ EolpMwAAAABJRU5ErkJggg==" />
     <tr>
       <th scope="row"><span class="cb">CB</span> &lt;i&gt;</th>
       <td><span class="trn">CB markup tag</span> &lt;i&gt;</td>
-      <td>cb-i.pot, cb-i.po, cb-i.html</td>
+      <td>cb-i.pot, cb-i.po, <a href="https://cgc-dan.github.io/cgc-designers/p/translate/cb-i/cb-i.html" target="_blank">cb-i.html</a></td>
       <td align="center"><a href="https://github.com/cgc-dan/cgc-designers/releases/tag/trn4-I" target="_blank">
 	  <svg class="svg-icon-dnld" viewBox="0 0 20 20">
 							<path fill="#09F" d="M15.608,6.262h-2.338v0.935h2.338c0.516,0,0.934,0.418,0.934,0.935v8.879c0,0.517-0.418,0.935-0.934,0.935H4.392c-0.516,0-0.935-0.418-0.935-0.935V8.131c0-0.516,0.419-0.935,0.935-0.935h2.336V6.262H4.392c-1.032,0-1.869,0.837-1.869,1.869v8.879c0,1.031,0.837,1.869,1.869,1.869h11.216c1.031,0,1.869-0.838,1.869-1.869V8.131C17.478,7.099,16.64,6.262,15.608,6.262z M9.513,11.973c0.017,0.082,0.047,0.162,0.109,0.226c0.104,0.106,0.243,0.143,0.378,0.126c0.135,0.017,0.274-0.02,0.377-0.126c0.064-0.065,0.097-0.147,0.115-0.231l1.708-1.751c0.178-0.183,0.178-0.479,0-0.662c-0.178-0.182-0.467-0.182-0.645,0l-1.101,1.129V1.588c0-0.258-0.204-0.467-0.456-0.467c-0.252,0-0.456,0.209-0.456,0.467v9.094L8.443,9.553c-0.178-0.182-0.467-0.182-0.645,0c-0.178,0.184-0.178,0.479,0,0.662L9.513,11.973z"></path>
@@ -269,7 +269,7 @@ EolpMwAAAABJRU5ErkJggg==" />
     <tr>
       <th scope="row"><span class="cb">CB</span> &lt;strong&gt;</th>
       <td><span class="trn">CB markup tag</span> &lt;strong&gt;</td>
-      <td>cb-strong.pot, cb-strong.po, cb-strong.html</td>
+      <td>cb-strong.pot, cb-strong.po, <a href="https://cgc-dan.github.io/cgc-designers/p/translate/cb-strong/cb-strong.html" target="_blank">cb-strong.html</a></td>
       <td align="center"><a href="https://github.com/cgc-dan/cgc-designers/releases/tag/trn4-Strong" target="_blank">
 	  <svg class="svg-icon-dnld" viewBox="0 0 20 20">
 							<path fill="#09F" d="M15.608,6.262h-2.338v0.935h2.338c0.516,0,0.934,0.418,0.934,0.935v8.879c0,0.517-0.418,0.935-0.934,0.935H4.392c-0.516,0-0.935-0.418-0.935-0.935V8.131c0-0.516,0.419-0.935,0.935-0.935h2.336V6.262H4.392c-1.032,0-1.869,0.837-1.869,1.869v8.879c0,1.031,0.837,1.869,1.869,1.869h11.216c1.031,0,1.869-0.838,1.869-1.869V8.131C17.478,7.099,16.64,6.262,15.608,6.262z M9.513,11.973c0.017,0.082,0.047,0.162,0.109,0.226c0.104,0.106,0.243,0.143,0.378,0.126c0.135,0.017,0.274-0.02,0.377-0.126c0.064-0.065,0.097-0.147,0.115-0.231l1.708-1.751c0.178-0.183,0.178-0.479,0-0.662c-0.178-0.182-0.467-0.182-0.645,0l-1.101,1.129V1.588c0-0.258-0.204-0.467-0.456-0.467c-0.252,0-0.456,0.209-0.456,0.467v9.094L8.443,9.553c-0.178-0.182-0.467-0.182-0.645,0c-0.178,0.184-0.178,0.479,0,0.662L9.513,11.973z"></path>
@@ -278,7 +278,7 @@ EolpMwAAAABJRU5ErkJggg==" />
     <tr>
       <th scope="row"><span class="cb">CB</span> &lt;u&gt;</th>
       <td><span class="trn">CB markup tag</span> &lt;u&gt;</td>
-      <td>cb-u.pot, cb-u.po, cb-u.html</td>
+      <td>cb-u.pot, cb-u.po, <a href="https://cgc-dan.github.io/cgc-designers/p/translate/cb-u/cb-u.html" target="_blank">cb-u.html</a></td>
       <td align="center"><a href="https://github.com/cgc-dan/cgc-designers/releases/tag/trn4-U" target="_blank">
 	  <svg class="svg-icon-dnld" viewBox="0 0 20 20">
 							<path fill="#09F" d="M15.608,6.262h-2.338v0.935h2.338c0.516,0,0.934,0.418,0.934,0.935v8.879c0,0.517-0.418,0.935-0.934,0.935H4.392c-0.516,0-0.935-0.418-0.935-0.935V8.131c0-0.516,0.419-0.935,0.935-0.935h2.336V6.262H4.392c-1.032,0-1.869,0.837-1.869,1.869v8.879c0,1.031,0.837,1.869,1.869,1.869h11.216c1.031,0,1.869-0.838,1.869-1.869V8.131C17.478,7.099,16.64,6.262,15.608,6.262z M9.513,11.973c0.017,0.082,0.047,0.162,0.109,0.226c0.104,0.106,0.243,0.143,0.378,0.126c0.135,0.017,0.274-0.02,0.377-0.126c0.064-0.065,0.097-0.147,0.115-0.231l1.708-1.751c0.178-0.183,0.178-0.479,0-0.662c-0.178-0.182-0.467-0.182-0.645,0l-1.101,1.129V1.588c0-0.258-0.204-0.467-0.456-0.467c-0.252,0-0.456,0.209-0.456,0.467v9.094L8.443,9.553c-0.178-0.182-0.467-0.182-0.645,0c-0.178,0.184-0.178,0.479,0,0.662L9.513,11.973z"></path>
@@ -287,7 +287,7 @@ EolpMwAAAABJRU5ErkJggg==" />
     <tr>
       <th scope="row"><span class="cb">CB</span> &lt;ul&gt; &lt;ol&gt; &lt;li&gt;</th>
       <td><span class="trn">CB markup tag</span> &lt;ul&gt; &lt;ol&gt; &lt;li&gt;</td>
-      <td>cb-ul.pot, cb-ul.po, cb-ul.html</td>
+      <td>cb-ul.pot, cb-ul.po, <a href="https://cgc-dan.github.io/cgc-designers/p/translate/cb-ul/cb-ul.html" target="_blank">cb-ul.html</a></td>
       <td align="center"><a href="https://github.com/cgc-dan/cgc-designers/releases/tag/trn4-UL" target="_blank">
 	  <svg class="svg-icon-dnld" viewBox="0 0 20 20">
 							<path fill="#09F" d="M15.608,6.262h-2.338v0.935h2.338c0.516,0,0.934,0.418,0.934,0.935v8.879c0,0.517-0.418,0.935-0.934,0.935H4.392c-0.516,0-0.935-0.418-0.935-0.935V8.131c0-0.516,0.419-0.935,0.935-0.935h2.336V6.262H4.392c-1.032,0-1.869,0.837-1.869,1.869v8.879c0,1.031,0.837,1.869,1.869,1.869h11.216c1.031,0,1.869-0.838,1.869-1.869V8.131C17.478,7.099,16.64,6.262,15.608,6.262z M9.513,11.973c0.017,0.082,0.047,0.162,0.109,0.226c0.104,0.106,0.243,0.143,0.378,0.126c0.135,0.017,0.274-0.02,0.377-0.126c0.064-0.065,0.097-0.147,0.115-0.231l1.708-1.751c0.178-0.183,0.178-0.479,0-0.662c-0.178-0.182-0.467-0.182-0.645,0l-1.101,1.129V1.588c0-0.258-0.204-0.467-0.456-0.467c-0.252,0-0.456,0.209-0.456,0.467v9.094L8.443,9.553c-0.178-0.182-0.467-0.182-0.645,0c-0.178,0.184-0.178,0.479,0,0.662L9.513,11.973z"></path>
@@ -296,7 +296,7 @@ EolpMwAAAABJRU5ErkJggg==" />
     <tr>
       <th scope="row"><span class="cb">CB</span> &lt;h1&gt;...&lt;h3&gt;</th>
       <td><span class="trn">CB markup tag</span> &lt;h1&gt;...&lt;h3&gt;</td>
-      <td>cb-h1.pot, cb-h1.po, cb-h1.html</td>
+      <td>cb-h1.pot, cb-h1.po, <a href="https://cgc-dan.github.io/cgc-designers/p/translate/cb-h1/cb-h1.html" target="_blank">cb-h1.html</a></td>
       <td align="center"><a href="https://github.com/cgc-dan/cgc-designers/releases/tag/trn4-H1" target="_blank">
 	  <svg class="svg-icon-dnld" viewBox="0 0 20 20">
 							<path fill="#09F" d="M15.608,6.262h-2.338v0.935h2.338c0.516,0,0.934,0.418,0.934,0.935v8.879c0,0.517-0.418,0.935-0.934,0.935H4.392c-0.516,0-0.935-0.418-0.935-0.935V8.131c0-0.516,0.419-0.935,0.935-0.935h2.336V6.262H4.392c-1.032,0-1.869,0.837-1.869,1.869v8.879c0,1.031,0.837,1.869,1.869,1.869h11.216c1.031,0,1.869-0.838,1.869-1.869V8.131C17.478,7.099,16.64,6.262,15.608,6.262z M9.513,11.973c0.017,0.082,0.047,0.162,0.109,0.226c0.104,0.106,0.243,0.143,0.378,0.126c0.135,0.017,0.274-0.02,0.377-0.126c0.064-0.065,0.097-0.147,0.115-0.231l1.708-1.751c0.178-0.183,0.178-0.479,0-0.662c-0.178-0.182-0.467-0.182-0.645,0l-1.101,1.129V1.588c0-0.258-0.204-0.467-0.456-0.467c-0.252,0-0.456,0.209-0.456,0.467v9.094L8.443,9.553c-0.178-0.182-0.467-0.182-0.645,0c-0.178,0.184-0.178,0.479,0,0.662L9.513,11.973z"></path>
@@ -305,7 +305,7 @@ EolpMwAAAABJRU5ErkJggg==" />
     <tr>
       <th scope="row"><span class="cb">CB</span> &lt;img&gt;</th>
       <td><span class="trn">CB markup tag</span> &lt;img&gt;</td>
-      <td>cb-img.pot, cb-img.po, cb-img.html</td>
+      <td>cb-img.pot, cb-img.po, <a href="https://cgc-dan.github.io/cgc-designers/p/translate/cb-img/cb-img.html" target="_blank">cb-img.html</a></td>
       <td align="center"><a href="https://github.com/cgc-dan/cgc-designers/releases/tag/trn4-IMG" target="_blank">
 	  <svg class="svg-icon-dnld" viewBox="0 0 20 20">
 							<path fill="#09F" d="M15.608,6.262h-2.338v0.935h2.338c0.516,0,0.934,0.418,0.934,0.935v8.879c0,0.517-0.418,0.935-0.934,0.935H4.392c-0.516,0-0.935-0.418-0.935-0.935V8.131c0-0.516,0.419-0.935,0.935-0.935h2.336V6.262H4.392c-1.032,0-1.869,0.837-1.869,1.869v8.879c0,1.031,0.837,1.869,1.869,1.869h11.216c1.031,0,1.869-0.838,1.869-1.869V8.131C17.478,7.099,16.64,6.262,15.608,6.262z M9.513,11.973c0.017,0.082,0.047,0.162,0.109,0.226c0.104,0.106,0.243,0.143,0.378,0.126c0.135,0.017,0.274-0.02,0.377-0.126c0.064-0.065,0.097-0.147,0.115-0.231l1.708-1.751c0.178-0.183,0.178-0.479,0-0.662c-0.178-0.182-0.467-0.182-0.645,0l-1.101,1.129V1.588c0-0.258-0.204-0.467-0.456-0.467c-0.252,0-0.456,0.209-0.456,0.467v9.094L8.443,9.553c-0.178-0.182-0.467-0.182-0.645,0c-0.178,0.184-0.178,0.479,0,0.662L9.513,11.973z"></path>
@@ -314,7 +314,7 @@ EolpMwAAAABJRU5ErkJggg==" />
     <tr>
       <th scope="row"><span class="cb">CB</span> &lt;font&gt;</th>
       <td><span class="trn">CB markup tag</span> &lt;font&gt;</td>
-      <td>cb-font.pot, cb-font.po, cb-font.html</td>
+      <td>cb-font.pot, cb-font.po, <a href="https://cgc-dan.github.io/cgc-designers/p/translate/cb-font/cb-font.html" target="_blank">cb-font.html</a></td>
       <td align="center"><a href="https://github.com/cgc-dan/cgc-designers/releases/tag/trn4-Font" target="_blank">
 	  <svg class="svg-icon-dnld" viewBox="0 0 20 20">
 							<path fill="#09F" d="M15.608,6.262h-2.338v0.935h2.338c0.516,0,0.934,0.418,0.934,0.935v8.879c0,0.517-0.418,0.935-0.934,0.935H4.392c-0.516,0-0.935-0.418-0.935-0.935V8.131c0-0.516,0.419-0.935,0.935-0.935h2.336V6.262H4.392c-1.032,0-1.869,0.837-1.869,1.869v8.879c0,1.031,0.837,1.869,1.869,1.869h11.216c1.031,0,1.869-0.838,1.869-1.869V8.131C17.478,7.099,16.64,6.262,15.608,6.262z M9.513,11.973c0.017,0.082,0.047,0.162,0.109,0.226c0.104,0.106,0.243,0.143,0.378,0.126c0.135,0.017,0.274-0.02,0.377-0.126c0.064-0.065,0.097-0.147,0.115-0.231l1.708-1.751c0.178-0.183,0.178-0.479,0-0.662c-0.178-0.182-0.467-0.182-0.645,0l-1.101,1.129V1.588c0-0.258-0.204-0.467-0.456-0.467c-0.252,0-0.456,0.209-0.456,0.467v9.094L8.443,9.553c-0.178-0.182-0.467-0.182-0.645,0c-0.178,0.184-0.178,0.479,0,0.662L9.513,11.973z"></path>
@@ -323,7 +323,7 @@ EolpMwAAAABJRU5ErkJggg==" />
     <tr>
       <th scope="row"><span class="cb">CB</span> &lt;br&gt;</th>
       <td><span class="trn">CB markup tag</span> &lt;br&gt;</td>
-      <td>cb-br.pot, cb-br.po, cb-br.html</td>
+      <td>cb-br.pot, cb-br.po, <a href="https://cgc-dan.github.io/cgc-designers/p/translate/cb-br/cb-br.html" target="_blank">cb-br.html</a></td>
       <td align="center"><a href="https://github.com/cgc-dan/cgc-designers/releases/tag/trn4-BR" target="_blank">
 	  <svg class="svg-icon-dnld" viewBox="0 0 20 20">
 							<path fill="#09F" d="M15.608,6.262h-2.338v0.935h2.338c0.516,0,0.934,0.418,0.934,0.935v8.879c0,0.517-0.418,0.935-0.934,0.935H4.392c-0.516,0-0.935-0.418-0.935-0.935V8.131c0-0.516,0.419-0.935,0.935-0.935h2.336V6.262H4.392c-1.032,0-1.869,0.837-1.869,1.869v8.879c0,1.031,0.837,1.869,1.869,1.869h11.216c1.031,0,1.869-0.838,1.869-1.869V8.131C17.478,7.099,16.64,6.262,15.608,6.262z M9.513,11.973c0.017,0.082,0.047,0.162,0.109,0.226c0.104,0.106,0.243,0.143,0.378,0.126c0.135,0.017,0.274-0.02,0.377-0.126c0.064-0.065,0.097-0.147,0.115-0.231l1.708-1.751c0.178-0.183,0.178-0.479,0-0.662c-0.178-0.182-0.467-0.182-0.645,0l-1.101,1.129V1.588c0-0.258-0.204-0.467-0.456-0.467c-0.252,0-0.456,0.209-0.456,0.467v9.094L8.443,9.553c-0.178-0.182-0.467-0.182-0.645,0c-0.178,0.184-0.178,0.479,0,0.662L9.513,11.973z"></path>
@@ -332,7 +332,7 @@ EolpMwAAAABJRU5ErkJggg==" />
     <tr>
       <th scope="row"><span class="cb">CB</span> &lt;span&gt;</th>
       <td><span class="trn">CB markup tag</span> &lt;span&gt;</td>
-      <td>cb-span.pot, cb-span.po, cb-span.html</td>
+      <td>cb-span.pot, cb-span.po, <a href="https://cgc-dan.github.io/cgc-designers/p/translate/cb-span/cb-span.html" target="_blank">cb-span.html</a></td>
       <td align="center"><a href="https://github.com/cgc-dan/cgc-designers/releases/tag/trn4-Span" target="_blank">
 	  <svg class="svg-icon-dnld" viewBox="0 0 20 20">
 							<path fill="#09F" d="M15.608,6.262h-2.338v0.935h2.338c0.516,0,0.934,0.418,0.934,0.935v8.879c0,0.517-0.418,0.935-0.934,0.935H4.392c-0.516,0-0.935-0.418-0.935-0.935V8.131c0-0.516,0.419-0.935,0.935-0.935h2.336V6.262H4.392c-1.032,0-1.869,0.837-1.869,1.869v8.879c0,1.031,0.837,1.869,1.869,1.869h11.216c1.031,0,1.869-0.838,1.869-1.869V8.131C17.478,7.099,16.64,6.262,15.608,6.262z M9.513,11.973c0.017,0.082,0.047,0.162,0.109,0.226c0.104,0.106,0.243,0.143,0.378,0.126c0.135,0.017,0.274-0.02,0.377-0.126c0.064-0.065,0.097-0.147,0.115-0.231l1.708-1.751c0.178-0.183,0.178-0.479,0-0.662c-0.178-0.182-0.467-0.182-0.645,0l-1.101,1.129V1.588c0-0.258-0.204-0.467-0.456-0.467c-0.252,0-0.456,0.209-0.456,0.467v9.094L8.443,9.553c-0.178-0.182-0.467-0.182-0.645,0c-0.178,0.184-0.178,0.479,0,0.662L9.513,11.973z"></path>
