--- a/sponsor.html
+++ b/sponsor.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>support</title>
+<title>thank you - CGC Team</title>
 <meta http-equiv="refresh" content="25; URL='https://blockchain.com/btc/payment_request?address=1Lv6V1DXprnG1U4Mg4JZWQzpKB7VT6Zi4d&amount=0.00012112&message=BECOME%20A%20SPONSOR'" />
 <style>
 html{scroll-behavior: smooth;}
