--- a/sponsor.html
+++ b/sponsor.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>thank you - CGC Team</title>
-<meta http-equiv="refresh" content="25; URL='https://blockchain.com/btc/payment_request?address=1Lv6V1DXprnG1U4Mg4JZWQzpKB7VT6Zi4d&amount=0.00012112&message=BECOME%20A%20SPONSOR'" />
+<meta http-equiv="refresh" content="10; URL='https://blockchain.com/btc/payment_request?address=1Lv6V1DXprnG1U4Mg4JZWQzpKB7VT6Zi4d&amount=0.00012112&message=BECOME%20A%20SPONSOR'" />
 <style>
 html{scroll-behavior: smooth;}
 body{font-family:-apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Helvetica Neue", Arial, sans-serif,"Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";margin:0 auto;width:100%;}
@@ -48,7 +48,7 @@ body{background-color:#222;color:#fff;}
 <h1>Hi, Thank you for your interest in our development</h1>
 <p>If you want to support our initiative, please consider to donate via BTC (around 1$)</p> 
 <p><a class="button" href="https://blockchain.com/btc/payment_request?address=1Lv6V1DXprnG1U4Mg4JZWQzpKB7VT6Zi4d&amount=0.00012112&message=BECOME%20A%20SPONSOR" target="_blank">SUPPORT CGC INITIATIVE</a></p>
-<p>If you are not redirected automatically, click the button above.</p>
+<p>If you are not redirected automatically after 10 seconds, click the button above.</p>
 </div>
 
 </div>
