--- a/p/learn-to-code-bios.html
+++ b/p/learn-to-code-bios.html
@@ -134,7 +134,7 @@
       </div>
     </div>
   </div>
-  <div class="col-md-3 col-sm-6 text-center notyet">
+  <div class="col-md-3 col-sm-6 text-center">
     <div class="card card-seller border-0 rounded-0 pt-0">
 <img class="card-img-top img-fluid" src="https://d31rb55u3y3kjs.cloudfront.net/c/u/520476279851687b6dabcc7189410390/2019/10/19064841/mfc_cvr.jpg" alt="Coding MyFreeCams Profiles"/>
       <div class="card-body">
@@ -154,7 +154,7 @@
 							<path fill="none" d="M11.611,10.049l-4.76-4.873c-0.303-0.31-0.297-0.804,0.012-1.105c0.309-0.304,0.803-0.293,1.105,0.012l5.306,5.433c0.304,0.31,0.296,0.805-0.012,1.105L7.83,15.928c-0.152,0.148-0.35,0.223-0.547,0.223c-0.203,0-0.406-0.08-0.559-0.236c-0.303-0.309-0.295-0.803,0.012-1.104L11.611,10.049z"></path>
 						</svg><span class="trn">Demos and Examples</span></li>
          </ul>
-         <div class="col-md-12 text-center"><a href="#" class="fetbn trn">Go for it</a></div>
+         <div class="col-md-12 text-center"><a href="https://cgc-dan.github.io/cgc-designers/p/mfc/code-myfreecams.html" class="fetbn trn">Go for it</a></div>
       </div>
     </div>
   </div>
