--- a/p/learn-to-code-bios.html
+++ b/p/learn-to-code-bios.html
@@ -318,7 +318,7 @@
 
 </div><!-- / main -->
 
-<!-- / footer -->
+<!--- / footer --->
 
     <script src="../js/jquery.min.js"></script>
     <script src="../bootstrap/js/bootstrap.min.js"></script>
