--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
 
 <!-- Header Image -->
 <div class="jumbotron jumbotron-fluid rounded-0 p-0 m-auto">
-<div class="w-100 text-center seller-cover"><img src="img/cgc.jpg"/></div>
+<div class="w-100 text-center seller-cover"><img src="img/cgc.jpg" class="img-fluid"/></div>
 <div class="container-fluid top_language text-right">
 <div class="con stikytop">
-<a class="btn btn-primary btn-sm lang_selector border-0 trn enl shadow-none" href="#!" role="button" data-value="en" data-trn-key="EN">EN</a>
-<a class="btn btn-primary btn-sm lang_selector border-0 trn rol shadow-none" href="#!" role="button" data-value="ro" data-trn-key="RO">RO</a>
+<a class="btn btn-primary btn-sm lang_selector border-0 trn enl shadow-none" href="#" role="button" data-value="en" data-trn-key="EN">EN</a>
+<a class="btn btn-primary btn-sm lang_selector border-0 trn rol shadow-none" href="#" role="button" data-value="ro" data-trn-key="RO">RO</a>
 <a class="btn bg-transparent btn-sm border-0 trn shadow-none" href="#translate" data-toggle="modal" data-target="#translate" role="button"><img src="img/translate.png"/><span class="sr-only trn">Change Language</span></a>
 </div></div>
 </div>
@@ -296,7 +296,7 @@
     <script src="bootstrap/js/bootstrap.min.js"></script>
     <script src="bootstrap/js/popper.min.js"></script>
     <script src="translate/jquery.translate.js"></script>
-    <script src="https://raw.githubusercontent.com/cgc-dan/cgc-designers/master/translate/main.js"></script>
+    <script src="translate/main.js"></script>
 
 
 <script>
